Java 9 support, Java 9 is assumed during testing